# adventofcode2021

./: .gitignore  Cargo.toml  LICENSE  Manifest.toml  Project.toml  day11.py  day13.py  day15.py  day20.py  day22.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  mypy.ini  pyproject.toml  util.py
src/: adventofcode2021.jl  day1.jl  day19.jl  day2.jl  day25.jl  day3.jl  lib.rs  util.jl
