[tool.poetry]
name = "adventofcode2021"
version = "0.1.0"
description = ""
authors = ["Colin Fuller <cjfuller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "==3.10"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
flake8 = "^4.0.1"
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
